Bug 297355 - Dolphin leaves file preview tooltips open even when is not visible
Summary: Dolphin leaves file preview tooltips open even when is not visible
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: tooltip (other bugs)
Version First Reported In: 2.1
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-03 06:27 UTC by Māris Nartišs
Modified: 2012-09-20 16:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments
Dolphin's file tool tip is rendered also when Dolphin is not visible anymore (446.35 KB, image/png)
2012-04-03 06:27 UTC, Māris Nartišs
Details
Bug is still present in 4.9.0 (409.30 KB, image/png)
2012-08-15 16:47 UTC, Māris Nartišs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Māris Nartišs 2012-04-03 06:27:12 UTC
Created attachment 70102 [details]
Dolphin's file tool tip is rendered also when Dolphin is not visible anymore

When performing many actions with Dolphin and other applications, sometimes Dolphin leaves file preview tooltip permanently on. It might be on the top of other applications or on the top of Dolphin. Sometimes restatring Dolphin is necessary to remove it. There are no easy steps to reproduce.

Attaching a screenshot with a tooltip covering Firefox window.

A wild guess - under a io(?) load Dolphin fails to receive/process mouse-out event necessary to remove an open file tooltip.
Comment 1 Peter Penz 2012-04-03 06:44:28 UTC
Thanks for the report, this has been fixed in 4.8.1
Comment 2 Māris Nartišs 2012-08-15 16:47:24 UTC
Created attachment 73191 [details]
Bug is still present in 4.9.0

Apparently it's not fixed yet completely as still happens with 4.9.0.
Comment 3 Māris Nartišs 2012-08-15 16:48:27 UTC
Only way how to reopen it is by marking as "unconfirmed".
Comment 4 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:18:37 UTC
Resetting assignee to default as per bug #305719
Comment 5 Emmanuel Pescosta 2012-09-18 20:07:36 UTC
Review-Request: https://git.reviewboard.kde.org/r/106499/

Please test it ;)
Comment 6 Emmanuel Pescosta 2012-09-20 16:01:11 UTC
Git commit ecaa575f9dba7e5f907b28814da3702beef84b58 by Emmanuel Pescosta.
Committed on 20/09/2012 at 17:57.
Pushed by emmanuelp into branch 'KDE/4.9'.

Fix Bug 297355 - Dolphin leaves file preview tooltips open even when is not visible
FIXED-IN: 4.9.2
REVIEW: 106499

M  +14   -0    dolphin/src/views/dolphinview.cpp
M  +1    -0    dolphin/src/views/dolphinview.h

http://commits.kde.org/kde-baseapps/ecaa575f9dba7e5f907b28814da3702beef84b58