Fix Bug 297355 - Dolphin leaves file preview tooltips open even when is not visible

BUG: 297355
FIXED-IN: 4.9.2
REVIEW: 106499